Fix image stretch on about

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -89,7 +89,8 @@ img[src*="#clip-circle"]
   clip-path: circle(50% at 50% 50%)
   margin-top: 1rem
   margin-bottom: 3rem
-  width: 50%
+  max-width: 100%
+  height: auto
 
 article, main
   margin-top: 3rem
